--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
       <li nz-menu-item nzMatchRouter>
         <a routerLink="/basic">Basics</a>
       </li>
-      <li nz-submenu nzOpen nzTitle="Vector Data">
+      <li nz-submenu nzOpen nzTitle="Vector Data" nzIcon="dashboard">
         <ul>
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/renderJSON">Rendering GeoJSON</a>
