--- a/src/app/components/drag-drop/drag-drop.component.html
+++ b/src/app/components/drag-drop/drag-drop.component.html
@@ -1,2 +1,2 @@
-<h1>No funciona ya que no detecta la libreria 'ol-hashed'</h1>
+<h1>Arrastra un fichero GeoJSON para mostrarlo</h1>
 <div id="map-container2"></div>
