Create vector-data package

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,10 +14,10 @@
       <li nz-submenu nzOpen nzTitle="Vector Data" nzIcon="dashboard">
         <ul>
           <li nz-menu-item nzMatchRouter>
-            <a routerLink="/renderJSON">Rendering GeoJSON</a>
+            <a routerLink="/vectorData/renderJSON">Rendering GeoJSON</a>
           </li>
           <li nz-menu-item nzMatchRouter>
-            <a routerLink="/dragDrop">Drag and drop</a>
+            <a routerLink="/vectorData/dragDrop">Drag and drop</a>
           </li>
         </ul>
       </li>
