Add modifiy geopackage.json

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,9 @@
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/vectorData/dragDrop">Drag and drop</a>
           </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/vectorData/modifyingFeatures">Modifying features</a>
+          </li>
         </ul>
       </li>
     </ul>
