--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,9 @@
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/vectorData/modifyingFeatures">Modifying features</a>
           </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/vectorData/drawingNewFeatures">Drawing new features</a>
+          </li>
         </ul>
       </li>
     </ul>
