Delete ol-hashed dependency

--- a/src/app/components/vector-data/drawing-new-features/drawing-new-features.component.html
+++ b/src/app/components/vector-data/drawing-new-features/drawing-new-features.component.html
@@ -1,2 +1,3 @@
-<h1>Arrastra un fichero GeoJSON para mostrarlo. Puede modificar la lineas con el ratón</h1>
+<h1>Arrastra un fichero GeoJSON para mostrarlo. Puedes dibujar nuevos poligonos haciendo click con el raton para crear su
+    puntos</h1>
 <div id="map-container4"></div>
