--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,9 @@
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/vectorData/drawingNewFeatures">Drawing new features</a>
           </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/vectorData/snapping">Snapping</a>
+          </li>
         </ul>
       </li>
     </ul>
