Add download data create

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,9 @@
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/vectorData/snapping">Snapping</a>
           </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/vectorData/downloading">Downloading features</a>
+          </li>
         </ul>
       </li>
     </ul>
