--- a/src/app/components/vector-data/drag-drop/drag-drop.component.html
+++ b/src/app/components/vector-data/drag-drop/drag-drop.component.html
@@ -1,2 +1,5 @@
-<h1>Arrastra un fichero GeoJSON para mostrarlo</h1>
+<h1>Instrucciones</h1>
+<ol>
+  <li>Arrastra un fichero GeoJSON para mostrarlo</li>
+</ol>
 <div id="map-container2"></div>
