--- a/src/app/components/vector-data/making-look-nice/making-look-nice.component.html
+++ b/src/app/components/vector-data/making-look-nice/making-look-nice.component.html
@@ -4,8 +4,5 @@
   <li>Puedes dibujar nuevos poligonos pulsando Shift y moviendo el ratón
   </li>
 </ol>
-<div id="tools">
-  <a id="clear" (click)="clear()">Limpiar</a>
-  <a id="download" (click)="download()">Descargar</a>
-</div>
-<div id="map-container6"></div>
+<h5>En este componente solo se ha modificado el estilo</h5>
+<div id="map-container7"></div>
