--- a/src/app/components/vector-data/modifying-features/modifying-features.component.html
+++ b/src/app/components/vector-data/modifying-features/modifying-features.component.html
@@ -1,2 +1,6 @@
-<h1>Arrastra un fichero GeoJSON para mostrarlo. Puede modificar la lineas con el ratón</h1>
+<h1>Instrucciones</h1>
+<ol>
+  <li>Arrastra un fichero GeoJSON para mostrarlo</li>
+  <li>Puedes modificar la lineas con el ratón</li>
+</ol>
 <div id="map-container3"></div>
