--- a/src/app/components/vector-data/snapping/snapping.component.html
+++ b/src/app/components/vector-data/snapping/snapping.component.html
@@ -1,2 +1,7 @@
-<h1>Arrastra un fichero GeoJSON para mostrarlo. Puedes dibujar nuevos poligonos pulsaando Shift y moviendo el ratón</h1>
+<h1>Instrucciones</h1>
+<ol>
+  <li>Arrastra un fichero GeoJSON para mostrarlo</li>
+  <li>Puedes dibujar nuevos poligonos pulsando Shift y moviendo el ratón
+  </li>
+</ol>
 <div id="map-container5"></div>
