--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,6 +38,9 @@
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/vectorData/downloading">Downloading features</a>
           </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/vectorData/makingLookNice">Making it look nice</a>
+          </li>
         </ul>
       </li>
     </ul>
