--- a/src/app/components/vector-data/drawing-new-features/drawing-new-features.component.html
+++ b/src/app/components/vector-data/drawing-new-features/drawing-new-features.component.html
@@ -1,3 +1,8 @@
-<h1>Arrastra un fichero GeoJSON para mostrarlo. Puedes dibujar nuevos poligonos haciendo click con el raton para crear su
-    puntos</h1>
+<h1>Instrucciones</h1>
+<ol>
+  <li>Arrastra un fichero GeoJSON para mostrarlo</li>
+  <li>Puedes dibujar nuevos poligonos haciendo click con el raton para crear su
+    puntos
+  </li>
+</ol>
 <div id="map-container4"></div>
