--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,6 +43,13 @@
           </li>
         </ul>
       </li>
+      <li nz-submenu nzOpen nzTitle="Mobile Maps and Sensors" nzIcon="mobile">
+        <ul>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/mobileMapSensors/mobileMap">A mobile map</a>
+          </li>
+        </ul>
+      </li>
     </ul>
   </nz-sider>
   <nz-layout>
