--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,6 +48,9 @@
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/mobileMapSensors/mobileMap">A mobile map</a>
           </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/mobileMapSensors/geolocation">Geolocation</a>
+          </li>
         </ul>
       </li>
     </ul>
