--- a/src/app/components/vector-data/render-json/render-json.component.scss
+++ b/src/app/components/vector-data/render-json/render-json.component.scss
@@ -1,6 +1,6 @@
 #map-container {
   margin: 0;
-  height: 800px;
+  height: 100%;
   width: 100%;
   font-family: sans-serif;
   background-color: #04041b;
