--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,6 +51,9 @@
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/mobileMapSensors/geolocation">Geolocation</a>
           </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/mobileMapSensors/compass">Compass</a>
+          </li>
         </ul>
       </li>
     </ul>
