Mobile map sensors (#4)
* Add mobile map

* Add Geolocation

* Add compass

* Close subscription navigator geolocation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,6 +43,19 @@
           </li>
         </ul>
       </li>
+      <li nz-submenu nzOpen nzTitle="Mobile Maps and Sensors" nzIcon="mobile">
+        <ul>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/mobileMapSensors/mobileMap">A mobile map</a>
+          </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/mobileMapSensors/geolocation">Geolocation</a>
+          </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/mobileMapSensors/compass">Compass</a>
+          </li>
+        </ul>
+      </li>
     </ul>
   </nz-sider>
   <nz-layout>
