--- a/src/app/components/mobile-map-sensors/compass/compass.component.scss
+++ b/src/app/components/mobile-map-sensors/compass/compass.component.scss
@@ -1,9 +1,8 @@
-#map-container6 {
+#map-container-mobile3{
   margin: 0;
-  height: 650px;
+  height: 75vh;
   width: 100%;
   font-family: sans-serif;
-  background-color: #04041b;
 }
 
 #tools {
