--- a/src/app/components/mobile-map-sensors/mobile-map/mobile-map.component.scss
+++ b/src/app/components/mobile-map-sensors/mobile-map/mobile-map.component.scss
@@ -1,7 +1,6 @@
-#map-container {
+#map-container-mobile1 {
   margin: 0;
   height: 100%;
   width: 100%;
   font-family: sans-serif;
-  background-color: #04041b;
 }
