Add rendering points

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,6 +61,9 @@
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/webGL/mapSetup">Map setup</a>
           </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/webGL/rendering">Rendering points</a>
+          </li>
         </ul>
       </li>
     </ul>
