--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,13 +69,13 @@
       <li nz-submenu nzTitle="Vector tiles and Mapbox styles" nzIcon="heat-map">
         <ul>
           <li nz-menu-item nzMatchRouter>
-            <a routerLink="/mapbox/vectorTile">The VectorTile layer</a>
+            <a routerLink="/vectorTileMapbox/vectorTile">The VectorTile layer</a>
           </li>
           <li nz-menu-item nzMatchRouter>
-            <a routerLink="/mapbox/mapSetup">Making things look bright</a>
+            <a routerLink="/vectorTileMapbox/mapbox">Making things look bright</a>
           </li>
           <li nz-menu-item nzMatchRouter>
-            <a routerLink="/mapbox/mapSetup">Interact with VectorTile features</a>
+            <a routerLink="/vectorTileMapbox/mapSetup">Interact with VectorTile features</a>
           </li>
         </ul>
       </li>
