Add options sidenav

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -79,6 +79,19 @@
           </li>
         </ul>
       </li>
+      <li nz-submenu nzTitle="RasterOperations" nzIcon="up-circle">
+        <ul>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/raster/mapSetup">Map setup</a>
+          </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/raster/elevationData">Render elevation data</a>
+          </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/raster/seaLevel">Render sea level</a>
+          </li>
+        </ul>
+      </li>
     </ul>
   </nz-sider>
   <nz-layout>
