--- a/src/app/components/raster/sea-level/sea-level.component.html
+++ b/src/app/components/raster/sea-level/sea-level.component.html
@@ -1,1 +1,6 @@
-<p>sea-level works!</p>
+<div id="map-container-raster3"></div>
+<label id="slider">
+  Sea level
+  <input id="level" type="range" min="0" max="100" value="1"/>
+  +<span id="output"></span> m
+</label>
